# packed_data_structures

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/guide/: architecture.md  crud.md  dirty_tracking.md  overlays.md  schemas.md
docs/javascripts/: mathjax.js
docs/reference/: core.md  database.md  dirty_tracking.md  packed_array.md  remap_oracle.md  schemas.md  table.md  trackers.md  transaction_context.md
docs/stylesheets/: extra.css
src/packed_data_structures/: __init__.py  database.py  db_visualizer.py  dirty_tracking.py  edit_helpers.py  id_range.py  nb_adjacency_list_helpers.py  nb_hash_set.py  nb_utils.py  packed_array.py  remap_oracle.py  schemas.py  table.py  trackers.py  transaction_context.py
src/packed_data_structures/arrays/: __init__.py  dirty_tracking.py  packed_array.py  packed_ascii_string_array.py  packed_object_array.py  packed_string_array.py
src/packed_data_structures/graph/: __init__.py  overlay.py
src/packed_data_structures/overlays/: base.py  database.py  hooks.py  registry.py
src/packed_data_structures/schema_accessors/: __init__.py  ascii_string_col_accessor.py  foreign_key_accessor.py  (+3 more)
tests/: conftest.py  test_ascii_string_col.py  test_database.py  test_dirty_tracking.py  test_edit_helpers.py  test_graph_overlay.py  test_id_range.py  test_numba_utils.py  test_object_col.py  test_packed_array.py  test_packed_data_structures_test_fuzzing.py  test_remap_oracle.py  test_string_col.py  test_table.py  test_trackers.py  test_transaction_context.py  testing_utils.py
(+9 files in other folders)
