[project]
name = "packed_data_structures"
version = "0.1.0"
description = "A flexible Data oriented swap-and-pop based direct memory access DB system"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "numba",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
packed-data-structures = { workspace = true }

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
